changes vet cards html and css to fix their responsiveness
fixed invisible headings and subheadings

preloader color updated for all pages

aos timings delayed

--- a/about.css
+++ b/about.css
@@ -13,7 +13,7 @@ body, html {
     }
     .preloader{
     position: fixed;
-    background-color: #a53860;
+    background-color: #1f0707;
     top: 0;
     left: 0;
     right: 0;
