--- a/contact.css
+++ b/contact.css
@@ -15,7 +15,7 @@ html {
 }
 .preloader{
     position: fixed;
-    background-color: #a53860;
+    background-color: #1f0707;
     top: 0;
     left: 0;
     right: 0;
