--- a/services.css
+++ b/services.css
@@ -15,7 +15,7 @@ body {
 
 .preloader{
     position: fixed;
-    background-color: #a53860;
+    background-color: #1f0707;
     top: 0;
     left: 0;
     right: 0;
